# packet-builder

./: Cargo.toml  README.md  grammar.pest  packet_definition.json  test_packet.packet
src/: errors.rs  main.rs  models.rs  parser.rs  utilities.rs
src/generators/: c_generator.rs  go_generator.rs  mod.rs  net_generator.rs  python_generator.rs  rust_generator.rs  zig_generator.rs
src/models/: codegen_models.rs  mod.rs  parsing_models.rs
templates/: go.tera  packet_builder_c.hbs  packet_builder_net.hbs  packet_builder_rust.hbs  packet_multiplexer_net.hbs  zig.tera
templates/c/: c.tera  c_headers.tera  c_support.tera
