[package]
name = "packet_builder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "4.0.1"
pest = "2.1.3"
pest_derive = "2.1.0"
